--- a/client/src/app/features/present/components/controller/controller.component.scss
+++ b/client/src/app/features/present/components/controller/controller.component.scss
@@ -2,3 +2,93 @@ app-songs-bible-tabs, app-playlist {
     height: 100%;
     width: 100%;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+}
+
+.pre-presentation-container,
+.live-presentation-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 1rem;
+    overflow-y: auto;
+    padding: 0 80px 0 80px;
+}
+
+.pre-presentation-container {
+    flex: 2;
+    width: 100%;
+}
+
+.presentation-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 10px 20px;
+    width: 100%;
+}
+
+.presentation-buttons i {
+    margin: 0 10px 0 10px;
+}
+
+.delete-btn {
+    margin-right: 10px;
+}
+
+.black-screen-btn {
+    margin-right: 15px;
+}
+
+.bible-dropdown {
+    margin-right: 20px;
+}
+
+.live-presentation-container {
+    flex: 1;
+    background-color: #060910;
+    color: white;
+    padding-top: 25px;
+    width: 80%;
+}
+
+.live-presentation-container div p {
+    line-height: 35px;
+}
+
+.toggle-container, 
+.verse-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.verse-container {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.verse-container p {
+    font-size: 13px;
+    padding-top: 5px;
+    line-height: 8px;
+}
+
+.slide {
+    margin-bottom: 25px;
+}
+
+.slide p {
+    font-size: 13px;
+    line-height: 18px;
+}
+
+.slide p {
+    margin-bottom: 0 !important;
+}
